--- a/king-web-starter/src/main/resources/config/application.properties
+++ b/king-web-starter/src/main/resources/config/application.properties
@@ -24,7 +24,7 @@ logging.config=classpath:logback.xml
 logging.level.com=debug
 #spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://120.55.165.139:3306/king?serverTimezone=Asia/Shanghai&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/king?serverTimezone=Asia/Shanghai&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true
 spring.datasource.username=king
 spring.datasource.password=king123++
 spring.datasource.initialSize=5
@@ -87,4 +87,4 @@ king.threadpool.core_pool_size=10
 king.threadpool.max_pool_size=20
 king.threadpool.queue_capacity=50
 king.threadpool.keep_alive_time=50
-king.threadpool.name_prefix=kingWebAsync-
+king.threadpool.name_prefix=kingAsync-
